Explicaciones para generar el launcher
Signed-off-by: dsesteban@indra.es <dsesteban@indra.es>